@@ -93,6 +93,8 @@ val swap_float_comparison: float_comparison -> float_comparison
 
 type label = int
 val new_label: unit -> label
+val set_label: label -> unit
+val cur_label: unit -> label
 
 type rec_flag = Nonrecursive | Recursive
 
