@@ -107,10 +107,23 @@ let mk_function_sections f =
 ;;
 
 let mk_stop_after ~native f =
-  "-stop-after",
-  Arg.Symbol (Clflags.Compiler_pass.available_pass_names ~native, f),
+  let pass_names = Clflags.Compiler_pass.available_pass_names
+                     ~filter:(fun _ -> true)
+                     ~native
+  in
+  "-stop-after", Arg.Symbol (pass_names, f),
   " Stop after the given compilation pass."
 ;;
+
+let mk_save_ir_after ~native f =
+  let pass_names =
+    Clflags.Compiler_pass.(available_pass_names
+                             ~filter:can_save_ir_after
+                             ~native)
+  in
+  "-save-ir-after", Arg.Symbol (pass_names, f),
+  " Save intermediate representation after the given compilation pass\
+    (may be specified more than once)."
 
 let mk_dtypes f =
   "-dtypes", Arg.Unit f, " (deprecated) same as -annot"
@@ -1105,6 +1118,7 @@ module type Optcomp_options = sig
   val _afl_instrument : unit -> unit
   val _afl_inst_ratio : int -> unit
   val _function_sections : unit -> unit
+  val _save_ir_after : string -> unit
 end;;
 
 module type Opttop_options = sig
@@ -1333,6 +1347,7 @@ struct
     mk_g_opt F._g;
     mk_function_sections F._function_sections;
     mk_stop_after ~native:true F._stop_after;
+    mk_save_ir_after ~native:true F._save_ir_after;
     mk_i F._i;
     mk_I F._I;
     mk_impl F._impl;
@@ -1861,6 +1876,12 @@ module Default = struct
           | Some p ->
             if not (p = pass) then
               Compenv.fatal "Please specify at most one -stop-after <pass>."
+    let _save_ir_after pass =
+      let module P = Compiler_pass in
+        match P.of_string pass with
+        | None -> () (* this should not occur as we use Arg.Symbol *)
+        | Some pass ->
+          set_save_ir_after pass true
     let _thread = set use_threads
     let _verbose = set verbose
     let _version () = Compenv.print_version_string ()
