@@ -1,0 +1,3 @@
+#!/bin/sh
+
+grep "wrong argument 'typing'" compiler-output.raw | grep "save-ir-after" | sed 's/^.*: wrong argument/wrong argument/'
